# grackle

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  _auto_config.sh  config.py  grackle.service  load_service.sh  package.json  ppmgr.sh  pyproject.toml  requirements.txt  run.py  run_debug.py  setup.cfg  setup.py  tox.ini  wsgi.py
app/: __init__.py  api.py  app.py  chart.py  finances.py  main.py
grackle/: __init__.py  _version.py  app.py  config.py
grackle/core/: __init__.py  charting.py  connect.py  db.py  finances.py  gnucash.py  queries.py
grackle/etl/: __init__.py  etl_all.py
grackle/forms/: __init__.py  budget_analysis_form.py  refresh_confirm_form.py  select_mvb.py  select_mvm.py
grackle/model/: __init__.py  account.py  accounts.py  base.py  budget.py  cards.py  invoice.py  scheduled_transaction.py  scheduled_transactions.py  transaction.py  transactions.py
grackle/routes/: account.py  app.py  chart.py  finances.py  helpers.py  invoices.py  main.py  scheduled_transaction.py  transaction.py
grackle/settings/: __init__.py  config.py
grackle/templates/: base.html  budget-analysis.html  chart.html  compare.html  confirm.html  index.html  invoice.html  invoices.html  select-mvb.html  select-mvm.html  upload.html
public/: index.html  manifest.json
routes/: app.py  chart.py  finances.py  main.py
src/: App.css  App.js  index.js
src/components/: App.js  ChartAccount.js  DynamicPage.js  Home.js  ISODate.js  Layout.js  Loading.js  Menu.js  NoMatch.js  (+2 more)
templates/: base.html  chart.html  invoice.html  invoices.html  upload.html
(+23 files in other folders)
