[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grackle"
version = '0.2.1'
description = "A personal finance webapp built in Flask"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/grackle'
packages = [
    { include = 'grackle' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
kavalkilu = { git = "https://github.com/barretobrock/kavalkilu.git" }
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
Flask = "^2.2"
Flask-WTF = "^1"
Flask-SQLAlchemy = "^2"
numpy = "^1"
pandas = "^1"
piecash = "^1.2"
plotly = "^5"
pysmb = "^1"
requests = "^2"
sqlalchemy = "^1.3"
WTForms = "^3"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2"
pytest = "^7"
pytest-cov = "^3"
flake8 = "^4"
tox = "^3"

[tool.poetry.extras]
test = ["pytest"]

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']
